Docs - Fixed wrong background color (#255)

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -36,7 +36,7 @@
 }
 
 .wy-nav-content-wrap {
-    background-color: #001930;
+    background-color: #000d19;
 }
 
 .wy-nav-top {
